clase-3-teracloud/LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: lbservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: nginx-podname
  ports:
    - port: 80
      targetPort: 80
