clase-3-teracloud/NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport
spec:
  type: NodePort
  selector:
    app: nginx-podname
  ports:
    - port: 80           # Puerto interno del cluster
      targetPort: 80   # Puerto del contenedor
      nodePort: 30080    # Puerto fijo del nodo (rango 30000–32767) - OPCIONAL
