clase-3-teracloud/ingressbroken.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-podname
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-podname
                port:
                  number: 8080
